Sanity check -- ls the workspace

--- a/.github/workflows/swagger.yml
+++ b/.github/workflows/swagger.yml
@@ -5,6 +5,9 @@ jobs:
   OpenAPILint:
     runs-on: ubuntu-latest
     steps:
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
       - name: OpenAPI Lint Checks
         uses: nwestfall/openapi-action@v1.0.2
         with:
