--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,9 @@ description = ""
 authors = ["Benjamin Woods <ben@bjqw.me>"]
 license = "MIT"
 readme = "README.md"
+packages = [
+    { include = "api/v0", from = "src" }
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
