--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ psycopg2 = "^2.9.9"
 [tool.poetry.group.dev.dependencies]
 connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}
 alembic = "^1.13.0"
+pytest = "^7.4.3"
 
 [build-system]
 requires = ["poetry-core"]
