--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ connexion = {extras = ["flask", "swagger-ui"], version = "^3.0.5"}
 a2wsgi = "^1.9.0"
 flask = "^3.0.0"
 sqlalchemy = "^2.0.23"
-psycopg2 = "^2.9.9"
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}
