--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ a2wsgi = "^1.9.0"
 flask = "^3.0.0"
 sqlalchemy = "^2.0.23"
 psycopg2-binary = "^2.9.9"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 connexion = {extras = ["flask", "swagger-ui", "uvicorn"], version = "^3.0.5"}
